# simple-breakout-project

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  assets.cpp  assets.h  ball.cpp  ball.h  breakout.cpp  game.h  graphics.cpp  graphics.h  level.cpp  level.h  paddle.cpp  paddle.h  sprite.cpp  sprite.h  vcpkg.json
